# bd-python-module

./: .gitignore  00-spark-init.py  AGENTS.md  DATABRICKS_README.md  README.md  RELEASE.md  conda-readme.md  databricks-cli.md  databricks.yml  docker-compose.yml  interview.md  ipython_kernel_config.py  mlflow.db  pyproject.toml  requirments.txt  setup-and-cluster-submit.sh
.devcontainer/: devcontainer.json
conf/mysql/: SANDBOXDB.sql  config-file.cnf  envvars  init-setup.sh
conf/postgres/: connections.ini  envvars  init-user-db.sh  my-postgres.conf  postgres.sql
conf/unitycatalog/: server.properties
data/: departments.csv  employee.csv
notebooks/: databricks-dbutils.ipynb  databricks-langchain.ipynb  databricks_ai.ipynb  databricks_sql.ipynb  databricks_uc_functions.ipynb  profile.ipynb  python-notebook.ipynb  sample_notebook.ipynb
notebooks/config/: L001-tasks.yaml
notebooks/crewai/: L001-crewai_setup.ipynb  L002-crewai_trip_planner.ipynb  L003-agentic-workflow.ipynb  L004-rag-clients-search.ipynb  L005-ProjectDesigner.ipynb  L006-ImageList.ipynb  L007-Research_Write_Article.ipynb  L008-customer_support.ipynb  L009-tools_customer_outreach.ipynb  L010-tasks_event_planning.ipynb  L014-crewai-knowledge-source.ipynb  L015-crewai-memory.ipynb  L015-langchain_crewai_tools.ipynb  L016-crewai_human_intraction.ipynb
notebooks/databricks/: databricks-dbutils.ipynb  databricks-langchain.ipynb  databricks_ai.ipynb  databricks_genie.ipynb  databricks_mcp.ipynb  databricks_notebook.ipynb  databricks_ollama.ipynb  databricks_sql.ipynb  databricks_uc_functions.ipynb  markdown-notebook.ipynb
notebooks/deltalake/: 01-deltalake-time travel.ipynb  03-deltalake-schema-evolution.ipynb  04-parquet-to-delta.ipynb  07-optimize-vacuum.ipynb  08-zorder.ipynb  09-liquid-clustering.ipynb
notebooks/interviews/: Interview_Q001.ipynb  Interview_Q002.ipynb  Interview_Q003.ipynb  Interview_Q004.ipynb  Interview_Q005.ipynb  Interview_Q006.ipynb  Interview_Q007.ipynb  Interview_Q008.ipynb  Interview_Q009.ipynb  Interview_Q010.ipynb  Interview_Q011.ipynb
notebooks/langchain/: 000-document.ipynb  000-pdf_loader.ipynb  001-langchain.ipynb  001-langchainintro.ipynb  002-agenticrag.ipynb  002-langchain-rag.ipynb  002-model-Integration.ipynb  003-langchain-hf.ipynb  003-langgraph-conssite-audit .ipynb  003-langgraph-groq.ipynb  003-langgraph-recruitment-workflow.ipynb  003-langrapah-user-flow.ipynb  003-tools-and-agents.ipynb  004-langgraph-azure-ai.ipynb  004-messages.ipynb  005-structuredoutput.ipynb  006-memory.ipynb  007-middleware.ipynb  008-human-intraction.ipynb  009-langchain-sql.ipynb
notebooks/minio/: MinIOTest.ipynb
notebooks/mysql/: artist_track_analysis.ipynb  setup-mysql.ipynb
notebooks/openai/: 000-openai.ipynb  playground.ipynb  spark_query.ipynb
notebooks/pyspark/: pyspark-matplotlib.ipynb
notebooks/pyspark/spark-joins/: spark-joins-stratgies.ipynb
notebooks/pyspark/spark-readers/: spark-jdbc.ipynb  spark-json.ipynb  spark-parquet.ipynb  spark-table.ipynb
notebooks/pyspark/spark-sql/: spark-caching.ipynb  spark-cost-based-optimization.ipynb  spark-groupby.ipynb  spark-hints.ipynb  spark-orderby.ipynb  spark-scd-t2-impl-1.ipynb  spark-session-catalog.ipynb  spark-sql-practice.ipynb  spark-window-functions.ipynb
resources/: job_dqx_qc.yml  lakeflow_pipeline_dqx_qc.yml
resources/jobs/: dbx_nyctaxi_flow.yml  dqx_qc.yml
resources/pipeline/: dbx_taxi_lakeflow.yml  lakeflow_dqx_qc.yml
skills/: SKILL.md
src/bd_python_module/: agent.py  main.py  py_app.py  py_pandas.py
storage/: .crewai_user.json  latest_kickoff_task_outputs.db
tests/: api_test.py  app_test.py  avro_test.py  conftest.py  crewai_test.py  helpers_test.py  read_json_test.py  test_calculator.py  test_calculator_with_fixtures.py
