[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"


[project]
name = "bd-python-module"
description = "bd-python-module"
version = "0.1.0"
keywords = ["spark", "deltalake", "openai", "mysql"]
authors = [{ name = "Brijesh K Dhaker", email = "brijeshdhaker@gmail.com" }]
maintainers = [
  { name = "Brijesh K Dhaker", email = "brijeshdhaker@gmail.com" }
]
readme = "README.md"
#license = "GPL-3.0"

requires-python = ">=3.12.13"

dependencies = [
    "core_module",
    "api_module",
    "app_module",
    "dbx_module",
    "dqx_module", 
    "ai_module",
    "tqdm>=4,<5",
]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "pip>=25.0.1",
    "coverage>=7.14.1",
]

test = [
    "pip~=26.0",  # required by databricks-labs-blueprint WheelsV2 which calls `pip wheel`; remove after blueprint migrates to uv
    "pytest"
]

[project.optional-dependencies]
dev = [

]


[project.scripts]
#main = "ai_module.apps.crewai.main:run"

#
[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.uv.sources]
core_module = { workspace = true }
api_module = { workspace = true }
app_module = { workspace = true }
dbx_module = { workspace = true }
dqx_module = { workspace = true }
ai_module = { workspace = true}

#
[tool.uv.workspace]
members = ["packages/*"]
exclude = [
    "packages/test_module",
]


[tool.pytest.ini_options]
#addopts = "--maxfail=1"
addopts = "--no-header"
cache_dir = ".venv/pytest-cache"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "anomaly: marks tests as anomaly detection tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = [
    "src", 
    "packages/core_module/src",
    "packages/app_module/src",
    "packages/api_module/src",
    "packages/dbx_module/src",
    "packages/dqx_module/src"
]